--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,19 @@
+html,
+body{
+	background-color: #F5F6F7;
+	padding: 0;
+	border: none;
+	margin: 0 auto;
+	height: 100%;
+	width: 100%;
+	font-family: "microsoft yahei";
+}
+*{
+	padding: 0;
+	margin: 0;
+}
 .content{
-	background-color: #E3EEEC;
+	
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -41,4 +55,77 @@
 	width: 100%;
     float: left;
     color: #858D8E;
+}
+.slide-1 {
+	position: relative;
+	height: 300px;
+	width: 100%;
+}
+
+.slide-1 .pic_list {
+	position: absolute;
+	list-style-type: none;
+	filter: Alpha(Opacity=80);
+	opacity: 0.8;
+	z-index: 10;
+	margin: 0;
+	padding: 0;
+	bottom: 20px;
+	right: 47%;
+	cursor: pointer;
+}
+
+.slide-1 .pic_list li {
+	padding: 0px 8px;
+	float: left;
+	display: block;
+	color: blue;
+	background: #transparent;
+	/*cursor: pointer; */
+	border: 0px;
+}
+
+.slide-1 .pic_list li .on {
+	background-color: #000;
+}
+
+.slide-1 .background_list {
+	left: 0px;
+	height: 300px;
+width: 100%;
+}
+
+.img_slide{
+	background-position: top center;
+	height: 300px;
+	width: 100%;
+}
+.background_list a {
+	position: absolute;
+}
+
+.slide_button {
+	width: 10px;
+	height: 10px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	background-color: #FFFFFF;
+	border: none;
+	outline: none;
+	filter: chroma(color=#000000);
+	opacity: 0.35;
+	/*	behavior: url(plugins/ie-css3.htc);*/
+	position: relative;
+	z-index: 10;
+}
+
+
+/**21
+ * 控制透明度
+ * 鼠标经过时，透明度降低
+ */
+
+.slide_button:hover {
+	opacity: 0.95;
 }
