--- a/css/recourse/head.css
+++ b/css/recourse/head.css
@@ -1,24 +1,29 @@
 /*顶栏和侧边栏*/
+html,body{
+	min-width:1200px;
+	overflow-x:hidden;
+}
 .top{
-	background-color: #1abaad;
+	/*background-color: #1abaad;*/
 	width: 100%;
 	height: 100px;
+	border: 1px solid #DDDDDD;
 }
 .topleft{
 	position: absolute;
 	left: 32px;
-	top: 32px;
+	top: 20px;;
 }
 .search {
 	border-top-left-radius:3px;
 	border-bottom-left-radius:3px;
 	width: 180px;
 	height: 30px;
-	border: 1px solid #ddd;	
+	border: 1px solid #1abaad;	
 }
 .topsearch{
 	position: absolute;
-	right: 35px;
+	right: 100px;
 	top: 35px;
 }
 .searchicon{
@@ -27,7 +32,7 @@
 .top_menu{
 	 position: absolute;
 	left: 400px;
-	top: 20px;
+	top: 15px;
 }
 .top ul li {
 	display: inline;
@@ -47,8 +52,8 @@
 	text-decoration: none;
 }
 .top_menu a.active{
-	color: #ffffff;	
+	color: #1abaad;	
 }
 .top_menu a:hover{
-	color: #E3EEEC;
+	color: #1abaad;
 }
